Update blog header on mobile devices. Get rid of fixed header

--- a/static/css/body.css
+++ b/static/css/body.css
@@ -1,3 +1,4 @@
 body {
     text-align: left;
+    padding-top: 0;
 }
